# cx_Freeze_entry-points

./: README.md  README.txt  dummy.py  pyproject.toml
dummymod/: cli.py  plugin.py
